Import .gitignore from Citrite

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,23 @@
-# Object files
+/bin
+*~
+\#*\#
+.\#*
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+*.tar*
+*.zip
+*.log
+*.gba
 *.o
-*.ko
-*.obj
-*.elf
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
+*.elf
+*.bin
+*.gba.*
+*.pyc
+*.nlz
+*.psd
+*.dib
+*.bmp
+*.patch
+*.exe
